# termoil

./: .gitignore  Cargo.toml  NChapter-6-.md  README.md  chat.json  error.md  exam.md
src/: api.rs  cli.rs  command.rs  main.rs  os.rs
